--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.json]
+[{*.css, *.json, *.scss}]
 indent_size = 4
 
 # Matches the exact files either package.json or .travis.yml
